--- a/designer.html
+++ b/designer.html
@@ -411,7 +411,7 @@ font-size: 9px;
 </head>
 <body>
 <!-- Full-screen 3D scene as background -->
-<a-scene embedded background="color: #e9e9e9" renderer="preserveDrawingBuffer: true">
+<a-scene  background="color: #e9e9e9" renderer="preserveDrawingBuffer: true">
 <a-assets>
 <a-asset-item id="shirtModel" src="t-shirt.glb"></a-asset-item>
 <img id="uvAsset" src="uvmap.png" crossorigin="anonymous" style="display:none;">
