--- a/index.html
+++ b/index.html
@@ -790,9 +790,9 @@
                 <div class="footer-column">
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-map-marker-alt"></i> 123 Design Street, Creative City</li>
-                        <li><i class="fas fa-phone"></i> +1 (555) 123-4567</li>
-                        <li><i class="fas fa-envelope"></i> info@vweave.com</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Amman,Jordan</li>
+                        <li><i class="fas fa-phone"></i> +962 7813 13782</li>
+                        <li><i class="fas fa-envelope"></i> info@vortigate.com</li>
                     </ul>
                 </div>
             </div>
